--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -17,4 +17,4 @@ html.h-100(lang="en")
   body.h-100
     .container-lg.h-100.p-3
       .h-100#chat
-    script(src=assetPath('main.js'))
+    script(src=assetPath('main.js') defer)
